feat(auth): add gcloud/ADC authentication with optional gcloud CLI fallback; update README and .env.example for Option C; ignore tmp/

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,13 @@
 # Google Ads MCP Environment Configuration
 # Copy this file to .env and fill in your actual values
 
-# Authentication Type (choose one: "oauth" or "service_account")
+# Authentication Type (choose one: "oauth", "service_account", or "gcloud")
 GOOGLE_ADS_AUTH_TYPE=oauth
 
 # Credentials Path
 # For OAuth: Path to client_secret.json or saved token file
 # For Service Account: Path to service account key file
+# Not required for GOOGLE_ADS_AUTH_TYPE=gcloud (ADC)
 GOOGLE_ADS_CREDENTIALS_PATH=/path/to/credentials.json
 
 # Google Ads Developer Token (required)
@@ -23,3 +24,8 @@ GOOGLE_ADS_CLIENT_SECRET=your_client_secret_here
 # For Service Account-specific config (optional)
 # Email to impersonate with the service account (typically your admin email)
 GOOGLE_ADS_IMPERSONATION_EMAIL=
+
+# For gcloud/ADC-specific config (optional)
+# Set to true to use 'gcloud auth print-access-token' as a fallback
+# when Application Default Credentials (ADC) are unavailable
+GOOGLE_ADS_GCLOUD_USE_CLI=false
